fix: Improve availability icon alignment

--- a/app/style/components/availability-state.less
+++ b/app/style/components/availability-state.less
@@ -19,7 +19,7 @@
 
 availability-state {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
 
   .availability-state-arrow {
     display: inline-block;
