--- a/app/style/components/user-profile.less
+++ b/app/style/components/user-profile.less
@@ -130,6 +130,7 @@ user-profile {
 
 .user-profile-details-availability {
   margin-top: 24px;
+  align-items: flex-end;
 
   .availability-state-label {
     .label-bold-xs();
