--- a/app/style/list/list.less
+++ b/app/style/list/list.less
@@ -53,6 +53,7 @@
 }
 
 .left-list-header-availability {
+  align-items: flex-end;
   cursor: pointer;
 
   .availability-state-label {
